- bug fix: datepicker in queues won't show today but date from last saved schedule